# debuggle

./: .env.example  .gitignore  ARCHITECTURE-EDUCATIONAL.md  ARCHITECTURE-TECHNICAL-EXPLAINED.md  ARCHITECTURE-TECHNICAL.md  BETA_DEPLOYMENT_SUMMARY.md  CHANGELOG.md  COVERAGE_ASSESSMENT.md  Dockerfile  FEATURE_STREAMLINING.md  FIXES_IMPLEMENTATION_SUMMARY.md  IMPORT_MAPPING.md  LICENSE  Makefile  PATH_TO_10_OF_10.md  PROCESSOR_COVERAGE_ACHIEVEMENT.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  SCOPE_CREEP_AUDIT.md  TESTING_EXCELLENCE.md  TIERS_COVERAGE_ACHIEVEMENT.md  TIER_SYSTEM_IMPLEMENTATION.md  TROUBLESHOOTING.md  VIRAL_STRATEGY.md  VSCODE_SETUP_COMPLETE.md  WORKSPACE_ANALYSIS_REPORT.md  WORKSPACE_ASSESSMENT_2024.md  debuggle_main.py  debuggle_standalone.py  docker-compose.yml  entry_point.py  fly.toml  install.py  install_simple.py  install_universal.py  install_vscode_extension.sh  load_vscode_extension.sh  logs.db  playwright.config.toml  (+15 more)
.github/workflows/: build-executables.yml  deploy-cloud.yml
app/: __init__.py  config.py  config_v2.py  main.py  models.py  processor.py
app/core/: analyzer.py  context.py  patterns.py
archive/: README_original.md
archive/enterprise_features/config/: .env.example  README.md  docker-compose.prod.yml
archive/enterprise_features/docker/: Dockerfile
archive/future_features/: app_factory.py  realtime.py  self_monitor.py
archive/future_features/api/: middleware.py
archive/future_features/api/routes/: common.py  dashboard.py  ingestion.py  storage.py  upload.py
archive/future_features/cloud/: __init__.py  cloud_api.py  cloud_share.py  cloud_storage.py
archive/future_features/services/: __init__.py
archive/future_features/storage/: database.py  search.py  search_engine.py
archive/old_installers/installer/: demo.py  github_support.py  one_click_install.py
assets/static/: index.html
cli/: __init__.py  debuggle_cli.py
config/: nginx.conf
demo_search_index/: MAIN_0qn9u2j7uspo2e25.seg  MAIN_bmggpwri6llpwdlx.seg  MAIN_gilwepd0rpyr119q.seg  MAIN_n48ncyggz6mp84ir.seg  MAIN_v38zatsbnbr91m9y.seg  _MAIN_165.toc
docker/: Dockerfile  docker-compose.yml
docs/: CHATGPT_COMPARISON.md  CLOUD_SETUP.md  CONTRIBUTING.md  DATABASE_ADMINISTRATION.md  DATABASE_SCHEMA.md  DATA_PERSISTENCE_GUIDE.md  DEMO_README.md  DEV_WORKFLOW_INTEGRATION.md  LIVE_DEMO.md  POST_REFACTOR_CLEANUP_PLAN.md  PROJECT_STRUCTURE_PLAN.md  QUALITY_VS_METRICS_GUIDE.md  README.md  REFACTORING_PLAN.md  SQLITE_IMPLEMENTATION.md  SQLITE_QUICK_REFERENCE.md  STANDALONE_DISTRIBUTION.md  TESTING_STANDARDS.md  VSCODE_INTEGRATION.md
docs/api/: README.md
docs/archive/: CLEANUP_SUMMARY.md  DEMO_FIXES_SUMMARY.md  PROJECT_ORGANIZATION_ASSESSMENT.md  README.md  WORKSPACE_ASSESSMENT_REPORT.md
docs/deployment/: docker.md
docs/internal/: POST_REFACTOR_CLEANUP_PLAN.md  README.md
docs/user-guide/: getting-started.md
examples/: README.md  claude_demo.py  compare_chatgpt.py  demo_errors.py  realtime_monitor.py  requirements.demo.txt  tier_demo.py  viral_demo.py
examples/demo_app/: app.py
examples/integrations/python/: basic_integration.py
installer/: README.md  debug_ai.py  debug_demo.py  quiet_install.py  test_buggle.py  web_installer.py
scripts/: README.md  backup.sh  build_all_platforms.sh  build_standalone.py  build_windows.bat  demo.sh  deploy.sh  setup-dev.sh  test.sh
search_index/: _MAIN_0.toc
src/debuggle/: __init__.py  alerting.py  app_factory.py  config.py  config_v2.py  context_extractor.py  dashboard.py  dependencies.py  ingestion.py  main.py  models.py  processor.py  processor_old.py  realtime.py
src/debuggle/api/: __init__.py
src/debuggle/api/routes/: __init__.py  alerts.py  analysis.py  common.py  ingestion.py  realtime.py  upload.py
src/debuggle/cloud/: cloud_deploy.py  cloud_share.py  cloud_storage.py
src/debuggle/core/: __init__.py  analyzer.py  context.py  patterns.py  processor.py  tiers.py
src/debuggle/integrations/: __init__.py  claude.py
src/debuggle/models/: __init__.py  alerts.py  analysis.py  common.py  dashboard.py  ingestion.py  storage.py  upload.py
src/debuggle/services/: alerting.py  dashboard.py
src/debuggle/storage/: __init__.py  database.py  retention.py  search_engine_old.py
src/debuggle/utils/: __init__.py  error_fixes.py  logging.py
static/: index.html
tests/: README_UI_TESTS.md  check_coverage.py  conftest.py  conftest_coverage.py  conftest_ui.py  e2e_beta_user_experience.py  pytest_coverage_plugin.py  temp.py  temp_test.py  test_100_percent_coverage.py  test_alerting_comprehensive.py  test_analyzer_api_working.py  test_api.py  test_api_coverage.py  test_claude_integration.py  test_cloud_api.py  test_cloud_deploy_comprehensive_new.py  test_cloud_storage.py  test_config_comprehensive.py  test_context_extractor.py  test_context_extractor_legacy.py  test_core_analyzer_comprehensive.py  test_core_analyzer_comprehensive_new.py  test_core_context_comprehensive.py  test_core_context_comprehensive.py.disabled  test_core_context_comprehensive_new.py  test_core_modules_coverage.py  test_core_patterns_comprehensive.py  test_core_patterns_comprehensive.py.disabled  test_core_patterns_comprehensive_fixed.py  test_core_patterns_comprehensive_fixed.py.disabled  test_core_patterns_comprehensive_new.py  test_core_processor_comprehensive.py  test_core_processor_edge_cases.py  test_core_processor_perfect_coverage.py  test_core_processor_ultimate.py  test_core_tiers_comprehensive.py  test_coverage_boost_final.py  test_coverage_improvements.py  test_coverage_strategy.py  (+40 more)
tests/fixtures/: stack_traces.py
vscode-extension/: README.md  fix_launch.sh  install.sh  package-lock.json  package.json  test_integration.py  tsconfig.json
vscode-extension/src/: debuggleMonitor.ts  extension.ts  monitoringPanel.ts
